unpackaged/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__EndDate__c.field-meta.xml
<CustomField>
    <fullName>maps__EndDate__c</fullName>
    <description>The end date that this window is valid for</description>
    <inlineHelpText>(facultatif) Si la Date de début est remplie, la Date de fin est requise</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>