unpackaged/main/default/objects/maps__AdvRouteVisitWindows__c/fields/maps__TimeWindowStart2__c.field-meta.xml
<CustomField>
    <fullName>maps__TimeWindowStart2__c</fullName>
    <description>start time of second time window option</description>
    <inlineHelpText>(facultatif) La fenêtre temporelle 2 ne peut pas chevaucher la fenêtre temporelle 1</inlineHelpText>
    <label>Time Window Start 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>maps__AdvRouteTimeWindows</valueSetName>
    </valueSet>
</CustomField>